# pwntools-stubs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  tests.yml
pwn-stubs/: __init__.pyi
pwnlib-stubs/: asm.pyi
pwnlib-stubs/tubes/: process.pyi  tube.pyi
typing_tests/: process.py
